--- a/index.html
+++ b/index.html
@@ -75,3 +75,5 @@
   <script src="particles.js"></script>
 </body>
 </html>
+
+<script src="https://cdn.jsdelivr.net/npm/tsparticles@2.12.0/tsparticles.bundle.min.js"></script>
